--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Zhineng Jin's Homepage
+page-top-title: Zhineng Jin
+top-section-bg-text: Civil Engineering
+home-subtitle: Zhineng Jin&infj;|&infj;金治能
+copyright-text: '&copy; Zhineng Jin 2023-2025. All Rights Reserved.'
