--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Zhineng Jin's Homepage
 page-top-title: Zhineng Jin
 top-section-bg-text: Civil Engineering
-home-subtitle: Zhineng Jin&ensp;|&ensp;金治能
+home-subtitle: Zhineng Jin | 金治能
 copyright-text: '&copy; Zhineng Jin 2023-2025. All Rights Reserved.'
